[build-system]
requires = ["hatchling", "pycryptodome"]
build-backend = "hatchling.build"

[project]
name = "pyenshash"
version = "1.0.0"
authors = [
  { name="szanuje" },
]
description = "Package containing basic functions related to Ethereum Name Service platform., such as namehash, labelhash, etc."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/szanuje/pyenshash"
"Bug Tracker" = "https://github.com/szanuje/pyenshash/issues"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]